# lib/db/src/schema/wholesale_customers.ts
@@ -11,6 +11,7 @@ export const wholesaleCustomersTable = pgTable("wholesale_customers", {
   companyType: text("company_type").notNull(), // TCP | MIPYME
   companyName: text("company_name").notNull(),
   onatDocument: text("onat_document").notNull(),
+  onatPhotoPath: text("onat_photo_path"),
   clientCode: text("client_code").notNull().unique(),
   clientNumber: integer("client_number").notNull(),
   createdAt: timestamp("created_at", { withTimezone: true }).defaultNow().notNull(),
